--- a/dashboard.html
+++ b/dashboard.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Dashboard | AlphaPebble</title>
-
     <meta
       name="description"
       content="AlphaPebble is a micro-product studio that builds MVPs and runs experiments quickly. Part experiment lab, part toolsmith, creating reusable outcomes."
     />
-
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.alphapebble.com/" />
     <meta property="og:title" content="AlphaPebble | Micro-Product Studio" />
@@ -21,7 +19,6 @@
       property="og:image"
       content="https://www.alphapebble.com/images/social-preview.png"
     />
-
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.alphapebble.com/" />
     <meta
@@ -40,7 +37,6 @@
     <link rel="preconnect" href="https://cdn.tailwindcss.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -54,9 +50,7 @@
               accent: "#2563EB",
               light: "#F6F6F7",
             },
-            fontFamily: {
-              sans: ["Inter", "sans-serif"],
-            },
+            fontFamily: { sans: ["Inter", "sans-serif"] },
             plugins: [
               function ({ addUtilities }) {
                 addUtilities({
@@ -88,13 +82,12 @@
         },
       };
     </script>
-
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body class="min-h-screen">
     <div id="cursor-dot"></div>
@@ -125,18 +118,16 @@
         </div>
       </div>
     </header>
-
     <main class="container mx-auto p-4 sm:p-8">
       <h1 class="text-3xl md:text-4xl font-bold mb-8">
         Project: AI Research Agent
       </h1>
-
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
         <div class="lg:col-span-2 space-y-8">
           <div class="bg-dark p-6 rounded-xl border border-gray-800">
             <h2 class="text-2xl font-semibold mb-4">Project Status</h2>
             <div
-              class="flex items-center justify-between p-4 bg-darker rounded-lg"
+              class="flex items-center justify-between p-4 bg-background-alt rounded-lg"
             >
               <div>
                 <p class="text-sm text-light/70">Current Stage</p>
@@ -153,7 +144,7 @@
           <div class="bg-dark p-6 rounded-xl border border-gray-800">
             <h2 class="text-2xl font-semibold mb-4">Message Board</h2>
             <div class="space-y-4">
-              <div class="p-4 bg-darker rounded-lg">
+              <div class="p-4 bg-background-alt rounded-lg">
                 <p class="font-bold mb-1">
                   Alex (AlphaPebble)
                   <span class="text-xs text-light/60 font-normal">
@@ -165,7 +156,7 @@
                   new data sourcing module is live. Let us know your feedback!
                 </p>
               </div>
-              <div class="p-4 bg-darker rounded-lg">
+              <div class="p-4 bg-background-alt rounded-lg">
                 <p class="font-bold mb-1">
                   You (Innovate Inc.)<span
                     class="text-xs text-light/60 font-normal"
@@ -217,10 +208,9 @@
         </div>
       </div>
     </main>
-
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="/script.js" defer></script>
+    <script src="/scripts/main.js" defer></script>
   </body>
 </html>
