--- a/post.html
+++ b/post.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Due Diligence for Investors & Acquirers | AlphaPebble</title>
+    <title>AlphaPebble | Micro-Product Studio</title>
     <meta
       name="description"
-      content="AlphaPebble offers productized technical due diligence to help VCs, acquirers, and founders audit codebases before committing to a deal."
+      content="AlphaPebble is a micro-product studio that builds MVPs and runs experiments quickly. Part experiment lab, part toolsmith, creating reusable outcomes."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.alphapebble.com/" />
@@ -19,7 +19,6 @@
       property="og:image"
       content="https://www.alphapebble.com/images/social-preview.png"
     />
-
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.alphapebble.com/" />
     <meta
@@ -38,7 +37,6 @@
     <link rel="preconnect" href="https://cdn.tailwindcss.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -52,9 +50,7 @@
               accent: "#2563EB",
               light: "#F6F6F7",
             },
-            fontFamily: {
-              sans: ["Inter", "sans-serif"],
-            },
+            fontFamily: { sans: ["Inter", "sans-serif"] },
             plugins: [
               function ({ addUtilities }) {
                 addUtilities({
@@ -86,24 +82,22 @@
         },
       };
     </script>
-
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body class="min-h-screen">
     <div id="cursor-dot"></div>
     <div id="cursor-outline"></div>
-
     <header
       class="py-4 fixed top-0 left-0 right-0 z-50 transition-all duration-300"
     >
       <div class="container mx-auto px-6 md:px-12">
         <nav class="flex justify-between items-center">
-          <a href="index.html#" class="flex items-center gap-3">
+          <a href="index.html" class="flex items-center gap-3">
             <img
               src="/images/logo.svg"
               alt="AlphaPebble Logo"
@@ -195,7 +189,6 @@
             </svg>
           </button>
         </nav>
-
         <div
           id="mobile-menu"
           class="hidden md:hidden py-4 mt-4 bg-background-alt rounded-lg border border-default"
@@ -230,51 +223,67 @@
         </div>
       </div>
     </header>
-
-    <main class="pt-32 pb-20">
-      <article class="container mx-auto px-6 md:px-12">
-        <header class="max-w-3xl mx-auto text-center mb-16" data-aos="fade-up">
+    <main class="pt-32 pb-20" id="blog-body">
+      <div id="post-container">
+        <article id="post-content" class="container mx-auto px-6 md:px-12">
           <a
-            href="index.html"
-            class="inline-block bg-primary/10 text-primary text-sm font-semibold px-4 py-1 rounded-full mb-6"
-            >Due Diligence</a
+            href="blog.html"
+            class="inline-flex items-center gap-2 text-text-secondary hover:text-accent mb-8"
           >
-          <h1 class="text-4xl md:text-5xl font-extrabold mb-4">
-            Tech Due Diligence for Investors & Acquirers
-          </h1>
-          <p class="text-lg text-light/60">5 min read • May 5, 2025</p>
-        </header>
-
-        <div class="prose-custom max-w-3xl mx-auto text-lg">
-          <p class="lead text-xl text-light/80" data-aos="fade-up">
-            We've productized technical due diligence to help VCs, acquirers,
-            and founders audit codebases and infrastructure before committing to
-            a deal. Get a fast technical gut check before the term sheet.
-          </p>
+            &larr; Back to Insights
+          </a>
+          <header
+            class="max-w-3xl mx-auto text-center mb-16"
+            data-aos="fade-up"
+          >
+            <div
+              id="post-category"
+              class="inline-block bg-primary/10 text-primary text-sm font-semibold px-4 py-1 rounded-full mb-6"
+            ></div>
+            <h1
+              id="post-title"
+              class="text-4xl md:text-5xl font-extrabold mb-4"
+            ></h1>
+            <p id="post-meta" class="text-lg text-text-primary"></p>
+          </header>
           <div
-            class="text-center mt-16 p-8 bg-darker border border-primary/30 rounded-2xl"
+            id="post-body"
+            class="prose prose-invert max-w-3xl mx-auto text-lg space-y-6"
+          ></div>
+          <div
+            class="spotlight-card card-hover max-w-3xl mx-auto text-center mt-16 p-8 bg-background-alt border border-default rounded-2xl"
             data-aos="zoom-in"
           >
-            <h2 class="text-3xl font-bold mb-4">
-              Make Informed Decisions with Confidence
-            </h2>
-            <p class="text-light/80 mb-6">
-              Our due diligence service helps you move forward on deals, armed
-              with the technical insights you need.
+            <h2 class="text-3xl font-bold mb-4">Ready to Optimize?</h2>
+            <p class="text-text-primary mb-6">
+              Let's discuss how we can help you slash cloud costs and get
+              security-ready for your next growth phase.
             </p>
-            <a href="../index.html#contact" class="btn btn-primary px-6 py-3"
-              >Request a Diligence Report</a
+            <a
+              href="index.html#contact"
+              class="btn btn-primary px-6 py-3 rounded-lg text-white font-semibold"
+              >Contact Us</a
             >
           </div>
+        </article>
+        <div id="post-not-found" class="hidden text-center py-16">
+          <h2 class="text-3xl font-bold mb-4">Article Not Found</h2>
+          <p class="text-text-secondary mb-8">
+            Sorry, we couldn't find the article you're looking for.
+          </p>
+          <a
+            href="blog.html"
+            class="btn bg-primary px-6 py-3 rounded-lg text-white font-semibold"
+            >Return to Insights</a
+          >
         </div>
-      </article>
+      </div>
     </main>
-
     <footer class="py-8 bg-background-alt border-t border-default">
       <div class="container mx-auto px-6 md:px-12">
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
           <div class="lg:col-span-4">
-            <a href="index.html#" class="flex items-center gap-3">
+            <a href="#" class="flex items-center gap-3">
               <img
                 src="/images/logo.svg"
                 alt="AlphaPebble Logo"
@@ -290,7 +299,7 @@
             </p>
             <div class="flex gap-5 mt-6">
               <a
-                href="index.html#"
+                href="#"
                 class="text-text-secondary hover:text-accent transition-colors"
                 aria-label="Twitter"
               >
@@ -301,7 +310,7 @@
                 </svg>
               </a>
               <a
-                href="index.html#"
+                href="#"
                 class="text-text-secondary hover:text-accent transition-colors"
                 aria-label="LinkedIn"
               >
@@ -312,7 +321,7 @@
                 </svg>
               </a>
               <a
-                href="index.html#"
+                href="#"
                 class="text-text-secondary hover:text-accent transition-colors"
                 aria-label="GitHub"
               >
@@ -331,28 +340,28 @@
             <ul class="space-y-3">
               <li>
                 <a
-                  href="index.html#services"
+                  href="#services"
                   class="text-text-secondary hover:text-text-secondary"
                   >What We Do</a
                 >
               </li>
               <li>
                 <a
-                  href="index.html#why-us"
+                  href="#why-us"
                   class="text-text-secondary hover:text-text-secondary"
                   >Why Us</a
                 >
               </li>
               <li>
                 <a
-                  href="index.html#how-we-work"
+                  href="#how-we-work"
                   class="text-text-secondary hover:text-text-secondary"
                   >Process</a
                 >
               </li>
               <li>
                 <a
-                  href="index.html#insights"
+                  href="#insights"
                   class="text-text-secondary hover:text-text-secondary"
                   >Insights</a
                 >
@@ -424,10 +433,10 @@
         </div>
       </div>
     </footer>
-
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="/script.js" defer></script>
+    <script src="/scripts/blog.js" defer></script>
+    <script src="/scripts/main.js" defer></script>
   </body>
 </html>
